# try_graphql_rest_api

./: .env  Cargo.toml  README.md
migrations/2022-02-27-144352_user/: down.sql  up.sql
migrations/2022-02-27-144400_team/: down.sql  up.sql
migrations/2022-02-27-144518_member/: down.sql  up.sql
migrations/2022-02-27-230010_initial_data/: down.sql  up.sql
src/: db.rs  engine.rs  entity.rs  handler.rs  lib.rs  main.rs  schema.rs
src/handler/: gql.rs  mod.rs  rest.rs
