[package]
edition = "2021"
name = "step_by_tech"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
